@@ -1,48 +1,52 @@
 package it.luzzetti.justdrink.backoffice.infrastructure.output.filesystem.adapters;
 
-import it.luzzetti.justdrink.backoffice.application.ports.input.restaurant.UploadLogoUsecase.UploadLogoRetaurantCommand;
-import it.luzzetti.justdrink.backoffice.application.ports.output.restaurant.UpdateFileRestaurantPort;
-import it.luzzetti.justdrink.backoffice.infrastructure.output.filesystem.adapters.shared.Directory;
-import java.io.FileOutputStream;
+import it.luzzetti.justdrink.backoffice.application.ports.output.restaurant.StoreRestaurantLogoPort;
+import it.luzzetti.justdrink.backoffice.domain.aggregates.restaurant.RestaurantErrors;
+import it.luzzetti.justdrink.backoffice.domain.shared.exceptions.ElementNotProcessableException;
+import it.luzzetti.justdrink.backoffice.domain.shared.typed_ids.RestaurantId;
+import it.luzzetti.justdrink.backoffice.domain.vo.Extension;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.PropertySource;
 import org.springframework.stereotype.Component;
 
 @Component
 @Log4j2
 @RequiredArgsConstructor
-@PropertySource(value = "filesystem.properties")
-public class RestaurantFileSystemAdapter implements UpdateFileRestaurantPort {
+public class RestaurantFileSystemAdapter implements StoreRestaurantLogoPort {
 
   @Value("${filesystem.upload.restaurant:uploadsDefault}")
   private String directoryFileSystem;
 
   @Override
-  public String updateLogo(UploadLogoRetaurantCommand command) {
+  public String storeRestaurantLogo(
+      RestaurantId restaurantId, byte[] content, Extension extension) {
 
-    Path root = Paths.get(directoryFileSystem);
+    Path path = Path.of(directoryFileSystem, restaurantId.id().toString());
 
-    Path path = root.resolve(command.restaurantId().id().toString()).resolve("logo");
+    createPathIfNotExistent(path);
 
-    Directory.init(path);
+    Path fileName = path.resolve("logo%s".formatted(extension.getValue()));
 
-    String milliseconds = String.valueOf(System.currentTimeMillis());
+    try {
+      Files.write(fileName, content);
+      return fileName.toString();
+    } catch (IOException exception) {
+      throw new ElementNotProcessableException(RestaurantErrors.LOGO_UPLOAD_IMPOSSIBLE);
+    }
+  }
 
-    String fullPath = path.resolve(milliseconds).toString();
-
-    try (FileOutputStream fos = new FileOutputStream(fullPath)) {
-      fos.write(command.file());
-      return fullPath;
+  private void createPathIfNotExistent(Path path) {
+    if (Files.exists(path)) {
+      return;
+    }
+    try {
+      Files.createDirectories(path);
     } catch (IOException e) {
-
-      throw new RuntimeException(String.format("Impossibile caricare il logo: %s", e.getMessage()));
+      throw new ElementNotProcessableException(RestaurantErrors.LOGO_UPLOAD_IMPOSSIBLE);
     }
   }
 }
